// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFloater with \`component\` as element should have rendered the component 1`] = `
<div class="__floater__body">
  <div class="sc-bdfBwQ gbZmDx">
    <div>
      Styled
    </div>
    <button type="button">
      close
    </button>
  </div>
  <div class="__floater__arrow"
       style="pointer-events: none; position: absolute; width: 100%; left: 0px; right: 0px; top: 0px; height: 16px;"
  >
    <span style="display: inline-flex; position: absolute; margin-left: 8px; margin-right: 8px;">
      <svg width="32"
           height="16"
           version="1.1"
           xmlns="http://www.w3.org/2000/svg"
      >
        <polygon points="32,16 16,0 0,16"
                 fill="#fff"
        >
        </polygon>
      </svg>
    </span>
  </div>
</div>
`;

exports[`ReactFloater with \`component\` as function should have rendered the component 1`] = `
<div class="__floater__body">
  <div class="sc-bdfBwQ gbZmDx">
    <div>
      Styled
    </div>
    <button type="button">
      close
    </button>
  </div>
  <div class="__floater__arrow"
       style="pointer-events: none; position: absolute; width: 100%; left: 0px; right: 0px; top: 0px; height: 16px;"
  >
    <span style="display: inline-flex; position: absolute; margin-left: 8px; margin-right: 8px;">
      <svg width="32"
           height="16"
           version="1.1"
           xmlns="http://www.w3.org/2000/svg"
      >
        <polygon points="32,16 16,0 0,16"
                 fill="#fff"
        >
        </polygon>
      </svg>
    </span>
  </div>
</div>
`;

exports[`ReactFloater with \`portalElement\` should should render properly and use the \`portalElement\` 1`] = `
<span>
  <span style="cursor: help; display: inline-flex; flex-direction: column;">
    <span>
      Places
    </span>
  </span>
</span>
`;

exports[`ReactFloater with multiple instances and \`portalElement\` should render properly, use the \`portalElement\` and don't remove it afterwards 1`] = `
<p>
  The
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        first president
      </span>
    </span>
  </span>
  of the
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        Republic of Bananas
      </span>
    </span>
  </span>
  is dead.
</p>
<button type="button">
  Toggle
</button>
`;

exports[`ReactFloater with multiple instances and \`portalElement\` should render properly, use the \`portalElement\` and don't remove it afterwards 2`] = `
<p>
  The first president of the
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        Republic of Bananas
      </span>
    </span>
  </span>
  is dead.
</p>
<button type="button">
  Toggle
</button>
`;

exports[`ReactFloater with multiple instances should render properly, add a single portal element and remove it after all tooltips unmount 1`] = `
<p>
  The
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        first president
      </span>
    </span>
  </span>
  of the
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        Republic of Bananas
      </span>
    </span>
  </span>
  is dead.
</p>
<button type="button">
  Toggle
</button>
`;

exports[`ReactFloater with multiple instances should render properly, add a single portal element and remove it after all tooltips unmount 2`] = `
<p>
  The first president of the
  <span>
    <span style="cursor: help; display: inline-flex; flex-direction: column;">
      <span>
        Republic of Bananas
      </span>
    </span>
  </span>
  is dead.
</p>
<button type="button">
  Toggle
</button>
`;
